...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ZH2-tt-Wsy">
                                        <rect key="frame" x="219.66666666666663" y="0.0" width="168.33333333333337" height="32"/>
                                        <segments>
                                            <segment title="Metric"/>
                                            <segment title="Imperial"/>
                                        </segments>
                                        <connections>
                                            <action selector="unitsChanged:" destination="a1I-Av-bkh" eventType="valueChanged" id="MFL-MQ-goT"/>
                                        </connections>
                                    </segmentedControl>
                                </subviews>
...
