...
                    }
                case .failure(let error):
                    Logger.printMessage(message: error.localizedDescription)
                    
                    switch error {
                        case .apiError:
                            self.showAlert(title: "Invalid Location", message: "Unable to fetch data")
                        case .genericError:
                            self.showAlert(title: "Invalid Location", message: "Some unknown error")
                        case .invalidResponse:
                            self.showAlert(title: "Invalid Location", message: "Invalid response")
                        case .noData:
                            self.showAlert(title: "Invalid Location", message: "No valid data")
...
